Fix logo overlap problem.

--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
     margin-top: -34px;
     position: relative;
     top: 34px;
+    z-index: 10;
 }
 
 /* Navigation */
