--- a/css/promo.css
+++ b/css/promo.css
@@ -1,6 +1,7 @@
 /* Promo Styles */
 .promo {
     position: relative;
+    z-index: 5;
 }
 
 .promo-desc {
